# leland-portfolio

./: README.md
GPT_Streamer/: README.md
Influ-ectious/: README.md  pyproject.toml
Influ-ectious/Data/CDC_FluView/Deaths/: National_Custom_Data.csv  Region_Custom_Data.csv  State_Custom_Data.csv
Influ-ectious/Data/CDC_FluView/Hospitalizations/: Characteristics.csv  Medical_Conditions.csv  Weekly_Data_Counts_by_Age.csv  Weekly_Data_Counts_by_Virus.csv  Weekly_Data_Percent_by_Age.csv  Weekly_Data_Percent_by_Virus.csv
Influ-ectious/Data/CDC_FluView/Hospitalizations/Hospitalization Rates/: FluSurveillance_Custom_Download_Data-IHSP.csv  FluSurveillance_Custom_Download_Data_CA_CO_CT.csv  FluSurveillance_Custom_Download_Data_EIP.csv  FluSurveillance_Custom_Download_Data_FlueSurv-NET.csv  FluSurveillance_Custom_Download_Data_GA_MD_MN.csv  FluSurveillance_Custom_Download_Data_ID_IA_MI_OH.csv  FluSurveillance_Custom_Download_Data_NM_NY.csv  FluSurveillance_Custom_Download_Data_OR_TN.csv
Influ-ectious/Data/CDC_FluView/Hospitalizations/Hospitalization_Rates/: FluSurveillance_Custom_Download_Data_EIP.csv  FluSurveillance_Custom_Download_Data_ID_IA_MI_OH.csv  FluSurveillance_Custom_Download_Data_OR_TN.csv  test_data.csv
Influ-ectious/influectious/: Disease.py  disease.py  main.py  ml_model.py  workflow.py
Influ-ectious/tests/: test_disease.py
TerraMars/: README.md
